# CppTrading

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
app/: CMakeLists.txt  cachebench.cpp  containerbench.cpp  helloworld.cpp  spscbench.cpp
lib/: CMakeLists.txt
lib/common/: spinlock.cpp  spinlock.h
lib/container/: orderbook.cpp  orderbook.h  process.cpp  spscqueue.cpp  spscqueue.h
